# ai-engineering-framework

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  ROADMAP.md
ai-config/: .pre-commit-config.yaml  .ruff.toml  pyproject.toml
ai-config/src/ai_config.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ai-config/tests/config/: test_constants.py  test_exceptions.py  test_operations.py
ai-config/tests/environment/: __init__.py  test_constants.py  test_exceptions.py  test_operations.py
ai-config/tests/loader/: test_constants.py  test_exceptions.py  test_operations.py
ai-config/tests/profiles/: test_exceptions.py  test_operations.py
ai-config/tests/settings/: test_constants.py  test_exceptions.py  test_operations.py
ai-config/tests/validators/: test_constants.py  test_exceptions.py  test_operations.py
ai-core/: .gitignore  .pre-commit-config.yaml  .ruff.toml  MANIFEST.in  README.md  pyproject.toml  pytest.ini  temp_backup_file1.txt  temp_backup_file2.txt
ai-core/src/: LICENSE
ai-core/src/ai_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai-core/src/base/: base_agent.py  base_component.py  base_controller.py  base_manager.py  base_model.py  base_repository.py  base_service.py  component_status.py  test_base_agent.py  test_base_component.py  test_base_controller.py  test_base_manager.py  test_base_model.py  test_base_repository.py  test_base_service.py
ai-core/src/config/: environment.py  logging_config.py  paths.py  settings.py  test_config.py  test_enviroment.py  test_logging.py  test_settings.py
ai-core/src/constants/: __init__.py  ai_constants.py  api_constants.py  app_constants.py  auth_constants.py  database_constants.py  error_constants.py  logging_constants.py  storage_constants.py  test_ai_constants.py  test_api_constants.py  test_app_constants.py  test_auth_constants.py  test_database_constants.py  test_error_constants.py  test_logging_constants.py  test_storage_constants.py
ai-core/src/exceptions/: __init__.py  ai_exception.py  authentication_exception.py  authorization_exception.py  base_exception.py  configuration_exception.py  database_exception.py  error_codes.py  file_exception.py  integration_exception.py  network_exception.py  not_found_exception.py  test_ai_exception.py  test_authentication_exception.py  test_authorization_exception.py  test_base_exception.py  test_configuration_exception.py  test_database_exception.py  test_error_codes.py  test_file_exception.py  test_integration_exception.py  test_network_exception.py  test_not_found_exception.py  test_package.py  test_validation_exception.py  validation_exception.py
ai-core/src/storage/: backup_manager.py  cache_manager.py  file_storage.py  storage_factory.py  storage_manager.py  storage_provider.py  temp_storage.py  test_backup_manager.py  test_cache_manager.py  test_file_storage.py  test_storage_factory.py  test_storage_manager.py  test_storage_provider.py  test_temp_storage.py  test_upload_manager.py  test_vector_storage.py  upload_manager.py  vector_storage.py
ai-core/src/utils/: datetime_utils.py  file_utils.py  hash_utils.py  id_utils.py  json_utils.py  path_utils.py  string_utils.py  test_datetime_utils.py  test_file_utils.py  test_hash_utils.py  test_id_utils.py  test_json_utils.py  test_path_utils.py  test_string_utils.py  test_validation_utils.py  validation_utils.py
ai-core/tests/base/: test_base_agent.py  test_base_component.py  test_base_controller.py  test_base_manager.py  test_base_model.py  test_base_repository.py  test_base_service.py
ai-core/tests/config/: test_config.py  test_environment.py  test_logging.py  test_settings.py
ai-core/tests/constants/: test_ai_constants.py  test_api_constants.py  test_app_constants.py  test_auth_constants.py  test_database_constants.py  test_error_constants.py  test_logging_constants.py  test_storage_constants.py
ai-core/tests/exceptions/: test_ai_exception.py  test_authentication_exception.py  test_authorization_exception.py  test_base_exception.py  test_configuration_exception.py  test_database_exception.py  test_error_codes.py  test_file_exception.py  test_integration_exception.py  test_network_exception.py  test_not_found_exception.py  test_package.py  test_validation_exception.py
ai-core/tests/providers/: test_base_provider.py  test_chat_models.py  test_factory.py  test_openai_provider.py  test_provider.py  test_provider_factory.py  test_types.py
ai-core/tests/storage/: test_backup_manager.py  test_cache_manager.py  (+7 more)
ai-excel-processor/: pyproject.toml
ai-support-platform/: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
ai-support-platform/backend/: debug_ticket_query.py  pytest.ini
(+2702 files in other folders)
