[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-ai-support-platform"
version = "0.1.0"
description = "Enterprise AI Customer Support Platform built using the AI Engineering Framework."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }

authors = [
    { name = "TECHAKKENA" }
]

keywords = [
    "ai",
    "customer-support",
    "fastapi",
    "rag",
    "llm",
    "enterprise",
    "agents",
    "automation"
]

classifiers = [
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed"
]

dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.37.0",

    "sqlalchemy>=2.0.44",
    "alembic>=1.16.5",

    "psycopg[binary]>=3.2.10",

    "redis>=6.4.0",

    "pydantic>=2.11.7",
    "pydantic-settings>=2.11.0",

    "python-dotenv>=1.1.1",

    "python-multipart>=0.0.20",

    "httpx>=0.28.1",

    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",

    "orjson>=3.11.3",

    "structlog>=25.4.0",

    "prometheus-client>=0.23.1",

    "openai>=1.108.1",

    "numpy>=2.3.2",

    "pandas>=2.3.2",

    "pytest>=8.4.2"
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pre-commit",
    "types-redis",
    "types-python-dateutil"
]

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
    "N",
    "ANN",
    "D"
]

ignore = [
    "D203",
    "D212"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = [
    "backend/app/tests"
]

python_files = [
    "test_*.py"
]

addopts = "-ra -q"

[tool.coverage.run]
source = [
    "backend/app"
]

[tool.coverage.report]
show_missing = true
skip_covered = true